--- a/프로젝트 구현단계/project_reload/css/map.css
+++ b/프로젝트 구현단계/project_reload/css/map.css
@@ -34,8 +34,7 @@
 #info_display{
     width:60%;
     height:95%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-radius: 10px;
     border: 1px solid black; /*TEST*/
     background-color: rgba(180,180,180,0.5);
     
@@ -62,7 +61,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-image: url('../img/reset.svg'); /* Ensure this path is correct */
+    background-image: url('../img/아이스크림.jpg'); /* Ensure this path is correct */
 
 }
 
@@ -143,6 +142,8 @@
 
 
 
+
+
 /*rotate icon*/
 @keyframes rotate_hover {
     from {
@@ -181,7 +182,7 @@
 
 /*달력*/
 #calendar-wrapper {
-    max-width: 800px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
@@ -213,10 +214,10 @@
 }
 
 .day.booked {
-    background-color: #333333;
+    background-color: #FF6B00 ;
 }
 
 .day.booked:hover {
-    background-color: #888888;
+    background-color: #FF6B00 ;
 }
 
