--- a/04. Comma/240722 이주성/css/mypage.css
+++ b/04. Comma/240722 이주성/css/mypage.css
@@ -2,7 +2,7 @@
     width: 70vw;
     margin: 8vh;
     display: inline-flex;
-    gap: 10vw;
+    gap: 4vw;
 }
 
 #mp_content_flexbox_left {
@@ -21,9 +21,6 @@
 }
 
 @media (min-width: 400px) {
-    #mp_content_flexbox_left {
-    }
-
     #mp_profile_box img {
         width: 20vh;
         height: 20vh;
@@ -124,15 +121,28 @@
     align-items: center;
 }
 
-#pick_box ul li p {
-    margin-bottom: 0;
-}
-
 #pick_box ul li a {
     text-decoration-line: none;
     color: black;
     font-weight: bold;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
+}
+
+#pick_box ul li img {
+    transition: transform 0.3s ease;
+} 
+
+#pick_box ul li a {
+    font-size: 15px;
+    font-weight: bold;
+    transition: font-size 0.3s, color 0.3s;
+}
+
+#pick_box ul li a:hover {
+    font-size: 1.3em;
+    font-weight: bolder;
+    color: #ff6b00;
+    border-color: #ff6b00;
 }
 
 #mp_heart_icon {
@@ -142,11 +152,19 @@
     cursor: pointer;
 }
 
+#mp_heart_icon:hover {
+    transform: scale(1.3);
+}
+
 #mp_pin_icon {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-right: 0.4rem;
     cursor: pointer;
+}
+
+#mp_pin_icon:hover {
+    transform: scale(1.3);
 }
 
 /* Overlay */
@@ -178,8 +196,24 @@
 
 #mp_pickboard_popup-header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between; /* 아이템들을 양 끝으로 분배 */
+    align-items: center; /* 아이템들을 교차축 중앙에 정렬 */
+    width: 100%; /* 컨테이너가 부모 요소를 꽉 채우도록 설정 */
     padding: 10px;
+}
+
+#mp_pickboard_popup-header-title {
+    flex-grow: 1; /* 제목을 가능한 넓게 확장하여 중앙에 오도록 설정 */
+    text-align: center; /* 제목 텍스트를 중앙 정렬 */
+}
+
+
+#mp_pickboard_popup-header img, #mp_pickboard_popup-header h5 {
+    margin-right: ;
+}
+
+#mp_pickboard_popup-header h5 {
+    font-weight: 900;
 }
 
 #mp_pickboard_popup-header button {
@@ -189,22 +223,71 @@
     cursor: pointer;
 }
 
-#popup-content {
+#mp_popup_content {
     padding: 20px;
 }
 
-.popup-gallery {
-    display: flex;
+.mp_popup_gallery {
+    display: grid;
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, minmax(100px, auto));
 }
 
-.popup-gallery img {
-    width: 100px;
-    height: 100px;
+.mp_popup_gallery div img {
+    width: 100%;
+    height: 23vh;
     object-fit: cover;
     border-radius: 5px;
+}
+
+.checkbox-container {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+}
+
+.checkbox-container input[type="checkbox"] {
+    width: 15px;
+    height: 15px;
+    border-radius: 20px;
+}
+
+.checkbox-container label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.checkbox-container label span {
+    display: inline-block;
+    padding-bottom: 3px;
+}
+
+.mp_checkbox input[type="checkbox"] {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    z-index: 2;
+}
+
+.mp_checkbox img {
+    position: relative;
+    z-index: 1;
+}
+
+#mp_popup_content_checkbox {
+    width: 100%;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#mp_popup_content_checkbox span{
+    font-size: 14px;
 }
 
 /*------------------mp_my_travel_grade_box-------------------*/
@@ -220,6 +303,11 @@
 
 #mp_baggage_icon {
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+#mp_baggage_icon:hover {
+    transform: scale(1.3);
 }
 
 /*-------------------------status_box-------------------------*/
@@ -295,9 +383,16 @@
 /*-----------------mp_content_flexbox_right---------------------*/
 
 #mp_header_text {
+    height: 10vh;
     display: flex;
-    gap: 7vw;
+    justify-content: space-around;
     text-align: center;
+}
+
+#mp_header_text div a:hover {
+    font-size: 1.3em;
+    font-weight: bolder;
+    color: #ff6b00;
 }
 
 #mp_header_text div a {
@@ -305,6 +400,8 @@
     color: black;
     font-weight: bold;
     font-size: large;
+    margin: 2rem;
+    transition: font-size 0.3s, color 0.3s;
 }
 
 #mp_header_text div p {
@@ -322,22 +419,48 @@
     margin: 2rem;
 }
 
+#add-post-button img {
+    transition: transform 0.3s ease;
+}
+
+#add-post-button img:hover {
+    transform: scale(1.3);
+}
+
 #mp_grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, minmax(100px, auto));
+    align-items: stretch;
     gap: 10px;
     margin: 20px;
 }
 .grid-item {
-    border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
+    overflow: hidden;
+    position: relative;
+    transition: transform 0.3s ease, z-index 0.3s ease;
 }
+
+/* 호버 시 그리드 아이템과 이미지 확대 */
+.grid-item:hover {
+    transform: scale(1.05);
+    z-index: 1; /* 호버된 요소를 앞에 보이게 함 */
+}
+
 .grid-item img {
-    max-width: 100%;
+    width: 100%;
+    height: 40vh;
     border-radius: 5px;
+    transition: transform 0.3s ease;
 }
+
+.grid-item:hover img {
+    transform: scale(1.15);
+}
+
 #new_board_popup {
     display: none;
     position: fixed;
