--- a/04. Comma/240722 이주성/css/sidebar-template.css
+++ b/04. Comma/240722 이주성/css/sidebar-template.css
@@ -5,19 +5,15 @@
     box-sizing: border-box;
     font-family: "Noto Sans KR", sans-serif;
 }
-
-/* 기본 틀 구성 */
-body,
-html,
-.wrap {
+  /* 기본 틀 구성 */
+body, html, .wrap {
     display: flex;
     background: white;
     flex-direction: column;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
 }
-
-/* Sidebar */
+  /* 사이드바 영역 */
 .sidebar {
     width: 20vw;
     height: 100vh;
@@ -32,21 +28,17 @@ html,
     justify-content: space-between;
     padding: 5vh 0;
 }
-
-/* Sidebar Logo */
 .sidebar-logo {
     width: 10vw;
     height: 10vh;
-    margin-bottom: 5vh;
+    margin-top: 9.2vh;
 }
-
 .sidebar-buttons {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1.5em;
 }
-
 .sidebar-buttons button {
     background-color: transparent;
     border: none;
@@ -56,33 +48,29 @@ html,
     cursor: pointer;
     transition: font-size 0.3s, color 0.3s;
 }
-
 .sidebar-buttons button:hover {
     font-size: 1.75em;
     font-weight: bolder;
-    color: #ff6b00;
+    color: #FF6B00;
 }
-
 .sidebar-buttons #logout:hover {
     font-size: 1.75em;
     font-weight: bolder;
-    color: #b10505;
+    color: #B10505;
 }
-
-.sidebar-footer > p {
+.sidebar-footer > p{
     font-size: 0.75em;
     font-weight: bold;
     color: #666;
 }
-
 .sidebar-footer > img {
     height: 1em;
 }
-
-/* Content */
+  /* 컨텐츠 영역 설정 */
 .content {
     margin-left: 20vw;
     width: 80vw;
-    height: 1000vh;
+    height: 100vh;
     background-color: white;
+    overflow-x: hidden;
 }
