--- a/04. Comma/240722 이주성/css/mypage.css
+++ b/04. Comma/240722 이주성/css/mypage.css
@@ -105,7 +105,7 @@
     }
 }
 
-/*-------------------------pick_box-------------------------*/
+/*-------------------------pick_board_box-------------------------*/
 
 #pick_box {
     margin: 5vh auto;
@@ -194,7 +194,7 @@
     z-index: 1000;
 }
 
-#mp_pickboard_popup-header {
+.mp_pick_popup-header {
     display: flex;
     justify-content: space-between; /* 아이템들을 양 끝으로 분배 */
     align-items: center; /* 아이템들을 교차축 중앙에 정렬 */
@@ -202,28 +202,23 @@
     padding: 10px;
 }
 
-#mp_pickboard_popup-header-title {
+.mp_pick_popup-header-title {
     flex-grow: 1; /* 제목을 가능한 넓게 확장하여 중앙에 오도록 설정 */
     text-align: center; /* 제목 텍스트를 중앙 정렬 */
 }
 
-
-#mp_pickboard_popup-header img, #mp_pickboard_popup-header h5 {
-    margin-right: ;
-}
-
-#mp_pickboard_popup-header h5 {
+.mp_pick_popup-header h5 {
     font-weight: 900;
 }
 
-#mp_pickboard_popup-header button {
+.mp_pick_popup-header button {
     background: none;
     border: none;
     font-size: 20px;
     cursor: pointer;
 }
 
-#mp_popup_content {
+.mp_popup_content {
     padding: 20px;
 }
 
@@ -256,14 +251,18 @@
 }
 
 .checkbox-container label {
+    width: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    margin-bottom: 5px;
     cursor: pointer;
 }
 
 .checkbox-container label span {
     display: inline-block;
     padding-bottom: 3px;
+    font-size: 14px;
 }
 
 .mp_checkbox input[type="checkbox"] {
@@ -278,16 +277,90 @@
     z-index: 1;
 }
 
-#mp_popup_content_checkbox {
+/*-------------------------pick_place_box-------------------------*/
+
+/* Overlay */
+#mp_pickplace_overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    margin-bottom: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
 }
 
-#mp_popup_content_checkbox span{
-    font-size: 14px;
+/* Popup */
+#mp_pickplace_popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 600px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
+.mp_pickplace-list {
+    max-height: 70vh;
+    overflow-y: auto;
+}
+
+.mp_pickplace-item {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.mp_pickplace-item input[type="checkbox"] {
+    margin-right: 15px;
+}
+
+.mp_pickplace-item img {
+    width: 20vw;
+    height: auto;
+    border-radius: 5px;
+    margin-right: 15px;
+}
+
+#certification_mark {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+}
+
+#star_score_4 {
+    width: 70%;
+    left: 0;
+}
+
+.mp_pickplace_details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex: 1;
+}
+
+.mp_pickplace_details h3 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.mp_pickplace_details .mp_pickplace_rating,
+.mp_pickplace_details .mp_pickplace_grade,
+.mp_pickplace_details .mp_pickplace_price {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 /*------------------mp_my_travel_grade_box-------------------*/
@@ -308,6 +381,83 @@
 
 #mp_baggage_icon:hover {
     transform: scale(1.3);
+}
+
+/* Overlay */
+#mp_grade_overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+/* Popup */
+#mp_grade_popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 600px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
+.mp_grade_info_box {
+    display: flex;
+}
+
+.mp_arrow {
+    width: 100%;
+}
+
+.mp_grade_my_info {
+    margin: 0 30px;
+}
+
+.mp_grade_marks {
+    display: flex;
+    justify-content: space-around;
+}
+
+.mp_grade_info_box .mp_grade_text_info {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.mp_arrow {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.mp_grade_marks img{
+    width: 70px;
+    height: 70px;
+    margin-bottom: 15px;
+}
+
+.mp_grade_my_info h4 {
+    margin-bottom: 20px;
+    font-size: 22px;
+    font-weight: 900;
+}
+
+.mp_grade_my_info img{
+    margin-bottom: 10px;
+}
+
+.mp_grade_text_info h6 {
+    margin-bottom: 30px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 /*-------------------------status_box-------------------------*/
@@ -412,18 +562,18 @@
 
 /*-----------------------new_board_upload-------------------------*/
 
-#add-post-button {
+#mp_add-post-button {
     display: flex;
     cursor: pointer;
     justify-content: end;
     margin: 2rem;
 }
 
-#add-post-button img {
+#mp_add-post-button img {
     transition: transform 0.3s ease;
 }
 
-#add-post-button img:hover {
+#mp_add-post-button img:hover {
     transform: scale(1.3);
 }
 
@@ -435,7 +585,7 @@
     gap: 10px;
     margin: 20px;
 }
-.grid-item {
+.mp_grid-item {
     border-radius: 5px;
     padding: 5px;
     text-align: center;
@@ -445,35 +595,24 @@
 }
 
 /* 호버 시 그리드 아이템과 이미지 확대 */
-.grid-item:hover {
+.mp_grid-item:hover {
     transform: scale(1.05);
     z-index: 1; /* 호버된 요소를 앞에 보이게 함 */
 }
 
-.grid-item img {
+.mp_grid-item img {
     width: 100%;
     height: 40vh;
     border-radius: 5px;
     transition: transform 0.3s ease;
 }
 
-.grid-item:hover img {
+.mp_grid-item:hover img {
     transform: scale(1.15);
 }
 
-#new_board_popup {
-    display: none;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    z-index: 1000;
-}
-#new_board_overlay {
+/* Overlay */
+#mp_new_board_overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -482,4 +621,23 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     z-index: 999;
+}
+
+/* Popup */
+#mp_new_board_popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 600px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
+.mp_new_board_box {
+    display: flex;
 }
