--- a/04. Comma/0726이상진/TeamProjectSB/TeampProject_SB/src/main/webapp/static/css/mypage.css
+++ b/04. Comma/0726이상진/TeamProjectSB/TeampProject_SB/src/main/webapp/static/css/mypage.css
@@ -533,6 +533,7 @@
 /*-----------------mp_content_flexbox_right---------------------*/
 
 #mp_header_text {
+    width: 20vh;
     height: 10vh;
     display: flex;
     justify-content: space-around;
@@ -546,7 +547,6 @@
 }
 
 #mp_header_text div a {
-    width: 10vw;
     text-decoration-line: none;
     color: black;
     font-weight: bold;
@@ -639,62 +639,6 @@
     z-index: 1000;
 }
 
-#mp_new_board_upload_popup img {
-    margin-top: 0.5rem;
-    width: 30px;
-    height: 30px;
-}
-
-.mp_new_board_box form {
+.mp_new_board_box {
     display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.mp_new_board_image_box {
-    display: flex;
-    flex-direction: column;
-    background-color: #ccc;
-    width: 35vh;
-    height: 35vh;
-    justify-content: center;
-    align-items: center;
-    margin-right: 1.5rem;
-    border-radius: 10px;
-}
-
-.mp_new_board_image_box img {
-    width: 20px;
-    height: 20px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
-.mp_new_board_image_box p {
-    cursor: pointer;
-}
-
-.mp_new_board_text_box textarea {
-    width: 40vh;
-    height: 35vh;
-    border: 1px solid #777676;
-    border-radius: 10px;
-    cursor: pointer;
-    resize: none;
-}
-
-.mp_pick_popup-header-title h5 {
-    font-size: 20px;
-    font-weight: 900;
-    margin-left: 3rem;
-    margin-top: 0.5rem;
-}
-
-textarea::placeholder {
-    color: #777676;
-    font-size: 1rem;
-    font-style: italic;
-    font-weight: bold;
-    text-align: start;
 }
