--- a/04. Comma/0726이상진/TeamProjectSB/TeampProject_SB/src/main/webapp/static/css/mypage.css
+++ b/04. Comma/0726이상진/TeamProjectSB/TeampProject_SB/src/main/webapp/static/css/mypage.css
@@ -20,6 +20,20 @@
     transition: background-color 0.3s ease;
 }
 
+.mp_user_info_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem 0;
+}
+
+.mp_user_info_box h5 {
+    font-size: 24px;
+    color: black;
+    cursor: pointer;
+}
+
 @media (min-width: 400px) {
     #mp_profile_box img {
         width: 20vh;
@@ -104,6 +118,35 @@
         margin-left: 5rem;
     }
 }
+
+/* Overlay */
+#mp_userInfo_overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+/* Popup */
+#mp_userInfo_popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 600px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
+
 
 /*-------------------------pick_board_box-------------------------*/
 
