--- a/04. Comma/240722 이주성/css/mypage.css
+++ b/04. Comma/240722 이주성/css/mypage.css
@@ -531,6 +531,10 @@
 }
 
 /*-----------------mp_content_flexbox_right---------------------*/
+#mp_content_flexbox_right {
+    width: 47vw;
+}
+
 
 #mp_header_text {
     height: 10vh;
@@ -579,6 +583,7 @@
 }
 
 #mp_grid-container {
+    width: 47vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, minmax(100px, auto));
@@ -699,24 +704,24 @@ textarea::placeholder {
     text-align: start;
 }
 
-/*--------------------------여행계획-----------------------------*/
+/*--------------------------travel_plan-----------------------------*/
 
-.mp_travel_recode_box {
-    width: 47vw;
+.mp_travel_plan_box {
     margin: 2rem;
 }
 
-.mp_travel_recode_icons {
+.mp_travel_plan_icons {
+    width: 100%;
     display: flex;
     align-items: start;
 }
 
-.mp_travel_recode_icons input[type="checkbox"]{
+.mp_travel_plan_icons input[type="checkbox"]{
     margin-right: 1rem;
 }
 
-.mp_travel_recode_icon {
-    width: 47vw;
+.mp_travel_plan_icon {
+    width: 100%;
     height: 30vh;
     display: flex;
     justify-content: space-between;
@@ -725,9 +730,16 @@ textarea::placeholder {
     margin-bottom: 0.5rem;
 }
 
-.mp_travel_recode_icons img{
+.mp_travel_plan_icon img {
     width: 40vh;
-    height: 29vh;
+    height: 29.6vh;
+    overflow: hidden;
+    align-items: center;
+    border-radius: 0 10px 10px 0;
+
+}
+
+.mp_travel_plan_icon h4, .mp_travel_plan_icon p {
     overflow: hidden;
 }
 
