--- a/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/sidebar-template.css
+++ b/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/sidebar-template.css
@@ -62,6 +62,7 @@ body, html, .wrap {
   font-size: 0.75em;
   font-weight: bold;
   color: #666;
+  margin-bottom: 1rem;
 }
 .sidebar-footer > img {
   height: 1em;
